refactor(application): Switch to JavaFX